[package]
name = "kytan"
version = "0.0.1"
authors = ["Chang Lan <clan@eecs.berkeley.edu>"]

[dependencies]
serde = "0.9"
serde_derive = "0.9.*"
libc = "*"
getopts = "*"
mio = "*"
rustc-serialize = "*"
bincode = "*"
log = "*"
env_logger = "*"
dns-lookup = "*"
nix = "*"
snap = "*"
rand = "*"
transient-hashmap = { git = "https://github.com/debris/transient-hashmap" }
